VZDEV/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CCPM_NPSCategory__c</fullName>
        <inlineHelpText>Based on the NPS score; Promoter, Passive, Detractor</inlineHelpText>
        <label>Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSComments__c</fullName>
        <inlineHelpText>Comments from the customer that filled out the NPS survey</inlineHelpText>
        <label>NPS Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSDateSurveyCompleted__c</fullName>
        <label>Date Survey Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSScore__c</fullName>
        <inlineHelpText>Net Promoter Score last entered from the account</inlineHelpText>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSmobileNumber__c</fullName>
        <inlineHelpText>MTN of the line that completed the survey for the account</inlineHelpText>
        <label>Survey MTN</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This individual has indicated they do not want to receive SMS communications from Verizon.</description>
        <inlineHelpText>This individual has indicated they do not want to receive SMS communications from Verizon.</inlineHelpText>
        <label>Do Not SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_SalesforceOptOutDateTime__c</fullName>
        <description>Salesforce Opt Out Date Time</description>
        <label>Salesforce Opt Out Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_accountNumber__c</fullName>
        <encrypted>true</encrypted>
        <label>Account Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_accountUniqueID__c</fullName>
        <description>Unique identifier of customer generated in Staging(Oracle) based on Account Number. Unique identifier of customer generated in staging(Oracle) based on account number. This unique identifier will always be same based on account number so that we can use this key for upsert logic</description>
        <externalId>true</externalId>
        <label>Account Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCPM_averageMargin__c</fullName>
        <description>1-100 decile to indicate average margin</description>
        <label>Average Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_channelPreference__c</fullName>
        <description>Preferred channel of the customer</description>
        <label>Channel Preference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_customerScore__c</fullName>
        <description>This field contains the score of the customer</description>
        <label>Customer Score</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_doNotSMSFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track history of change to &quot;Do Not SMS&quot; field. When &quot;Do Not SMS&quot; is set to TRUE, this field will get populated with value of &quot;Do Not SMS&quot;</description>
        <label>Do Not SMS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_email__c</fullName>
        <encrypted>true</encrypted>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CCPM_hasOptedOutOfCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This individual has indicated they do not want to receive phone calls from Verizon.</description>
        <inlineHelpText>This individual has indicated they do not want to receive phone calls from Verizon.</inlineHelpText>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_hasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This individual has indicated they do not want to receive email communications from Verizon.</description>
        <inlineHelpText>This individual has indicated they do not want to receive email communications from Verizon.</inlineHelpText>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isOutOfContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate customer is free from contract</description>
        <label>Out of Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isPaymentOverdue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate payment overdue</description>
        <label>Payment Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isVisionAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this box is checked when account is saved from Vision</description>
        <label>VisionAccount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_mobileNumber__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Account Owner’s MTN</inlineHelpText>
        <label>MTN</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCPM_storeID__c</fullName>
        <description>Unique ID of nearest store / outlet</description>
        <inlineHelpText>Nearest store ID to the account owner</inlineHelpText>
        <label>Nearest Store ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Based on the individual&apos;s address, this is their geographically closest Verizon store.</description>
        <inlineHelpText>Nearest store to the account owner</inlineHelpText>
        <label>Nearest Store</label>
        <referenceTo>CCPM_Store__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_upgradePropensity__c</fullName>
        <description>1-100 decile to iddicate propensity to upgrade</description>
        <label>Upgrade Propensity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>CCPM_myCustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CCPM_accountNumber__c</columns>
        <columns>CCPM_mobileNumber__c</columns>
        <columns>CCPM_email__c</columns>
        <columns>CCPM_SMSOptOut__c</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CCPM_store__c</columns>
        <columns>CCPM_storeID__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Customers</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>CCPM_customerAccount</fullName>
        <active>true</active>
        <description>Customer Account - Individual / Household</description>
        <label>Customer Account</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CCPM_validateAccountUpdatePrivilege</fullName>
        <active>true</active>
        <description>Validation rules to prevent update of certain fields (Account Holder, Account Number &amp; SMS Opt From True to FALSE by reps &amp; managers</description>
        <errorConditionFormula>AND(
    OR( 
       AND( 
           ISCHANGED(CCPM_SMSOptOut__c), 
           PRIORVALUE(CCPM_SMSOptOut__c ) = TRUE 
       ), 
       ISCHANGED(Name), 
       ISCHANGED(CCPM_accountNumber__c)
      ),
      $Profile.Name = &apos;CCPM Sales Rep&apos; 
)</errorConditionFormula>
        <errorMessage>You cannot edit the &apos;Do Not SMS&apos; flag once it has been ticked, or change the values in any of the other fields. If required, please contact your System Administrator for assistance.</errorMessage>
    </validationRules>
</CustomObject>